--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,10 @@
 script: "bundle exec rake spec"
 language: ruby
 rvm:
-  - 1.8.7
-  - 1.9.2
   - 1.9.3
   - 2.0.0
-  - jruby-18mode
+  - 2.1.1
   - jruby-19mode
-  - rbx-18mode
-  - ree
+  - rbx
 notifications:
   disable: true
